src/test/resources/private/typechecking/fail/assign/fail05.jova
class Helper0 {
}

class Helper1 {
}

class Test {
    public int func()
    {
        int a;
        bool b;
        string c;
        Helper0 d;
        Helper1 e;

        a = c;
        a = d;
        a = e;

        b = c;
        b = d;
        b = e;

        c = a;
        c = b;
        c = d;
        c = e;

        d = a;
        d = b;
        d = c;
        d = e;

        e = a;
        e = b;
        e = c;
        e = d;

        return 0;
    }
}